syntax = "proto3";

// Doc: https://developers.google.com/protocol-buffers/docs/proto3

package com.bdps.activity_staff;

option java_package = "com.bdps.activity_staff";
option java_outer_classname = "ActivityStaffProto";
// option java_multiple_files = true; 这个会将类分开，避免跟model重名可以不分开，如果太大可以考虑分开
//option objc_class_prefix = "SAMPLE";

message ActivityStaff {
    int32 activityStaffId = 1;
    int32 staffId = 2;
    int32 activityId = 3;
}

message ActivityStaffs {
    int32 page = 1;
    int32 limit = 2;
    int32 count = 3;
    repeated ActivityStaff nodes = 4;
}

message AddActivityStaffRequest {
    int32 staffId = 2;
    int32 activityId = 3;
}

message ListActivityStaffRequest {
    int32 page = 1;
    int32 limit = 2;
}

message GetActivityStaffRequest {
    int32 activityStaffId = 1;
}

message UpdateActivityStaffRequest {
    int32 activityStaffId = 1;
    int32 staffId = 2;
    int32 activityId = 3;
}

message DeleteActivityStaffRequest {
    int32 activityStaffId = 1;
}

service ActivityStaffService {
    rpc AddActivityStaff (AddActivityStaffRequest) returns (ActivityStaff) {
    }
    rpc ListActivityStaff (ListActivityStaffRequest) returns (ActivityStaffs) {
    }
    rpc GetActivityStaff (GetActivityStaffRequest) returns (ActivityStaff) {
    }
    rpc UpdateActivityStaff (UpdateActivityStaffRequest) returns (ActivityStaff) {
    }
    rpc DeleteActivityStaff (DeleteActivityStaffRequest) returns (ActivityStaff) {

    }
}